[gd_scene load_steps=20 format=2]

[ext_resource path="res://Item/item_database.gd" type="Script" id=1]
[ext_resource path="res://Item/Item.gd" type="Script" id=2]
[ext_resource path="res://Wood/wood.svg" type="Texture" id=3]
[ext_resource path="res://Wood/Tree.tscn" type="PackedScene" id=4]
[ext_resource path="res://Wood/Trunk.tscn" type="PackedScene" id=5]
[ext_resource path="res://Stone/stone.svg" type="Texture" id=6]
[ext_resource path="res://Stone/Rock.tscn" type="PackedScene" id=7]
[ext_resource path="res://Stone/Rock2.tscn" type="PackedScene" id=8]
[ext_resource path="res://Tool.gd" type="Script" id=9]
[ext_resource path="res://Axe/hatchet-item.svg" type="Texture" id=10]
[ext_resource path="res://Axe/hatchet-node.tscn" type="PackedScene" id=11]
[ext_resource path="res://Pickaxe/pickaxe-item.svg" type="Texture" id=12]
[ext_resource path="res://Pickaxe/pickaxe-node.tscn" type="PackedScene" id=13]
[ext_resource path="res://Craft Table/craft-table-item.svg" type="Texture" id=14]
[ext_resource path="res://Item/Consumable.gd" type="Script" id=15]
[ext_resource path="res://Bushes/tomato.svg" type="Texture" id=16]
[ext_resource path="res://Bushes/TomatoBush.tscn" type="PackedScene" id=17]
[ext_resource path="res://Bushes/orange.svg" type="Texture" id=18]
[ext_resource path="res://Bushes/OrangeBush.tscn" type="PackedScene" id=19]

[node name="ItemDatabase" type="Node"]
script = ExtResource( 1 )

[node name="wood" type="Node" parent="."]
script = ExtResource( 2 )
max_stack = 256
texture = ExtResource( 3 )
spawn_rate = 0.001

[node name="spawners" type="Node" parent="wood"]

[node name="Tree" parent="wood/spawners" instance=ExtResource( 4 )]
required_tool_class = "axe"

[node name="Trunk" parent="wood/spawners" instance=ExtResource( 5 )]
required_tool_class = "axe"

[node name="stone" type="Node" parent="."]
script = ExtResource( 2 )
max_stack = 256
texture = ExtResource( 6 )

[node name="spawners" type="Node" parent="stone"]

[node name="Rock" parent="stone/spawners" instance=ExtResource( 7 )]
required_tool_class = "pickaxe"

[node name="Rock2" parent="stone/spawners" instance=ExtResource( 8 )]
required_tool_class = "pickaxe"

[node name="hatchet" type="Node" parent="."]
script = ExtResource( 9 )
max_stack = 1
texture = ExtResource( 10 )

[node name="equipment" parent="hatchet" instance=ExtResource( 11 )]
collision_mask = 3
tool_class = PoolStringArray( "axe", "pickaxe" )
hit_strength = 3

[node name="pickaxe" type="Node" parent="."]
script = ExtResource( 9 )
max_stack = 1
texture = ExtResource( 12 )

[node name="equipment" parent="pickaxe" instance=ExtResource( 13 )]
tool_class = PoolStringArray( "pickaxe" )
hit_strength = 5

[node name="craft-table" type="Node" parent="."]
script = ExtResource( 9 )
max_stack = 1
texture = ExtResource( 14 )

[node name="tomato" type="Node" parent="."]
script = ExtResource( 15 )
max_stack = 20
texture = ExtResource( 16 )
hunger = 0.2
energy = 0.1

[node name="spawners" type="Node" parent="tomato"]

[node name="TomatoBush" parent="tomato/spawners" instance=ExtResource( 17 )]
required_tool_class = "hand"

[node name="orange" type="Node" parent="."]
script = ExtResource( 15 )
max_stack = 20
texture = ExtResource( 18 )
hunger = 0.2
energy = 0.1

[node name="spawners" type="Node" parent="orange"]

[node name="OrangeBush" parent="orange/spawners" instance=ExtResource( 19 )]
required_tool_class = "hand"
